2008-08-05  Sam Steingold  <sds@gnu.org>

	* modules/readline/readline.lisp: upgrade from readline 5.0 to 5.2
	(variable-value, reset-screen-size, prefer-env-winsize, readerr)
	(state-callback, state-vimotion, state-multikey, state-vicmdonce)
	(default-inputrc, sys-inputrc, tilde-expand): add
	* modules/readline/configure.in: check for the new features

2008-08-05  Vladimir Tzankov  <vtzankov@gmail.com>

	* lispbibl.d (pointable_address_unchecked) [HEAPCODES]:
	export to clisp.h

2008-08-04  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (PATHCONF): fix g++ compilation

2008-08-04  Sam Steingold  <sds@gnu.org>

	* pathname.d (check_file_reopen): fix a GC-safety bug; check the
	value of *REOPEN-OPEN-FILE* and change it to ERROR if it is invalid

2008-08-04  Sam Steingold  <sds@gnu.org>

	* analyse-funtab.lisp (map-calls): turn into a generic function to
	support generic functions (map over fast functions in methods)

2008-08-04  Sam Steingold  <sds@gnu.org>

	* control.d (make_vframe_activate): use GCTRIGGER2(value1,value2)
	instead of a global maygc similar to make_variable_frame() which
	is the only GC-unsafe call in make_vframe_activate()
	Reported by Vladimir Tzankov <vtzankov@gmail.com>

2008-08-04  Sam Steingold  <sds@gnu.org>

	* clos-class6.lisp (class-prototype@built-in-class): finish last
	patch: (SYS::%UNBOUND) should be the first argument to EQ

2008-08-04  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (thread_length): define to 3 because Thread contains
	3 gcv_object_t fields

2008-08-01  Sam Steingold  <sds@gnu.org>

	* modules/dbus/dbus.lisp: support dbus 1.2.1
	(*foreign-guard*): set to T
	* modules/dbus/configure.in: check all functions

2008-07-31  Sam Steingold  <sds@gnu.org>

	* clhs.lisp (documentation@package): fail gracefully when id-href
	is missing the package and impnotes must be regenerated

2008-07-31  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (def-c-enum): accept non-numeric-literal values
