@@ -4530,10 +4530,14 @@ Let us consider different criteria:<orderedlist numeration="arabic">
  The user variable <firstterm>&reopen;</firstterm> controls how &clisp;
  handles the situation and can take 3 values: <variablelist>
   <varlistentry><term>&nil;</term><listitem><simpara>
-     do nothing: do not even check that there are other stream pointing
-     to the same file</simpara></listitem></varlistentry>
+     do nothing: do not even check that there are other &stream-t;s
+     pointing to the same file</simpara></listitem></varlistentry>
   <varlistentry><term>&warn;</term><listitem><simpara>&signal; a
      &warning-t; and proceed</simpara></listitem></varlistentry>
+  <varlistentry><term>&close;</term><listitem><simpara>&close;
+     the <emphasis>other</emphasis> &stream-t;s and proceed
+     (this could be dangerous and is not generally recommended)
+  </simpara></listitem></varlistentry>
   <varlistentry><term>&error;</term><listitem><simpara>&signal; a &cont-err;;
      this is the default</simpara></listitem></varlistentry>
 </variablelist></para></simplesect>
