@@ -663,6 +663,7 @@ LISPSYM(rename_file,"RENAME-FILE",lisp)
 LISPSYM(file_error,"FILE-ERROR",lisp)
 LISPSYM(open,"OPEN",lisp)
 LISPSYM(reopen_open_file,"*REOPEN-OPEN-FILE*",custom)
+LISPSYM(close,"CLOSE",lisp)
 LISPSYM(directory,"DIRECTORY",lisp)
 LISPSYM(cd,"CD",ext)
 LISPSYM(make_directory,"MAKE-DIRECTORY",ext)
